--- a/Files/Program Files/BDAFINALCAPSTONE/static/login.css
+++ b/Files/Program Files/BDAFINALCAPSTONE/static/login.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .login-container {
   width: 900px;
   height: 500px;
