--- a/Files/Program Files/BDAFINALCAPSTONE/templates/predict.html
+++ b/Files/Program Files/BDAFINALCAPSTONE/templates/predict.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prediction - Coursecast</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/image.png') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -40,17 +41,24 @@
 
       <div class="alert alert-info mt-4">
         📅 Predicted Total Enrollees for {{ next_year }}:
-        <strong>{{ predicted_enrollees }} students</strong>
+        <strong>{{ next_year_prediction }} students</strong>
       </div>
 
       <div class="alert alert-success">
-        🏆 Predicted Most Popular Course Next Semester :
-        <strong>{{ top_course }}</strong>
+        🏆 Top 3 Predicted Courses with Highest Enrollees in {{ next_year }}:
+        <ul class="mt-2">
+          {% for course in top_courses %}
+            <li><strong>{{ course.name }}</strong> - {{ course.predicted }} students</li>
+          {% endfor %}
+        </ul>
       </div>
     </div>
 
     <div class='mt-5'>
       {{ chart_html | safe }}
+    </div>
+    <div>
+      {{ bar_chart_html | safe }}
     </div>
 
   </div>
