--- a/Files/Program Files/BDAFINALCAPSTONE/static/login.css
+++ b/Files/Program Files/BDAFINALCAPSTONE/static/login.css
@@ -18,3 +18,39 @@ body {
 .form-side {
   width: 50%;
 }
+
+@keyframes fadeSlideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.login-container {
+  animation: fadeSlideUp 0.8s ease-out;
+}
+
+.btn-dark:hover{
+  transform:scale(1.03);
+  transition: transform 0.2s ease-in-out;
+}
+
+.image-side {
+  background-size: cover;
+  background-position: center;
+  flex: 1;
+  animation: zoomInBg 20s ease-in-out infinite alternate;
+}
+
+@keyframes zoomInBg {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.05);
+  }
+}
